Minor fix to some NICE_* defaults

--- a/1bash.template
+++ b/1bash.template
@@ -413,7 +413,7 @@ SIB_COINS="SIB,NICE_X11GHOST"
 SKEIN_COINS="ZPOOL_SKEIN,MPH_SKEIN"
 SKUNK_COINS="SIGT,ZPOOL_SKUNK,ALTCOM,NICE_SKUNKHASH"
 X13_COINS="ONION"
-X16R_COINS="RVN,XMN"
+X16R_COINS="RVN,XMN,NICE_X16R"
 XEVAN_COINS="BSD"
 ZHASH_COINS="AION,BTG"
 
@@ -1252,13 +1252,13 @@ NICE_NEOSCRYPT_WORKER="$WORKERNAME"
 NICE_NEOSCRYPT_EXTENSION_ARGUMENTS=""
 
 #NICE_CRYPTONIGHT
-NICE_CRYPTONIGHT_POOL="cryptonight.eu.nicehash.com:3355"
+NICE_CRYPTONIGHT_POOL="cryptonight.eu.nicehash.com"
 NICE_CRYPTONIGHT_PORT="3355"
 NICE_CRYPTONIGHT_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_EXTENSION_ARGUMENTS=""
 
-#NICE_CRYPTONIGHT
-NICE_CNHEAVY_POOL="cryptonightheavy.eu.nicehash.com:3355"
+#NICE_CNHEAVY
+NICE_CNHEAVY_POOL="cryptonightheavy.eu.nicehash.com"
 NICE_CNHEAVY_PORT="3364"
 NICE_CNHEAVY_WORKER="$WORKERNAME"
 NICE_CNHEAVY_EXTENSION_ARGUMENTS=""
@@ -1270,13 +1270,13 @@ NICE_X11GOST_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_EXTENSION_ARGUMENTS=""
 
 #NICE_SKUNKHASH 
-NICE_SKUNKHASH_POOL="skunk.eu.nicehash.com:"
+NICE_SKUNKHASH_POOL="skunk.eu.nicehash.com"
 NICE_SKUNKHASH_PORT="3362"
 NICE_SKUNKHASH_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_EXTENSION_ARGUMENTS=""
 
 #NICE_X16R 
-NICE_X16R_POOL="x16r.eu.nicehash.com:"
+NICE_X16R_POOL="x16r.eu.nicehash.com"
 NICE_X16R_PORT="3366"
 NICE_X16R_WORKER="$WORKERNAME"
 NICE_X16R_EXTENSION_ARGUMENTS=""
