Add instructions on how to add NICE_* coins and mappings

--- a/1bash.template
+++ b/1bash.template
@@ -393,8 +393,9 @@ ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 DECRED EQUIHASH ETHASH
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
-CRYPTONIGHTV7_COINS="XMR,MPH_CRYPTONIGHTV7,NICE_CRYPTONIGHTV7,ETN"
-CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CNHEAVY"
+CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
+CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
+CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
 DECRED_COINS="DCR"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
 ETHASH_COINS="ETH,ETC,EXP,UBQ,CLO,MUSIC,SOIL,MPH_ETHASH,PIRL,NICE_ETHASH,ETP,CLAYMORE_DUAL"
@@ -1257,11 +1258,23 @@ NICE_CRYPTONIGHT_PORT="3355"
 NICE_CRYPTONIGHT_WORKER="$WORKERNAME"
 NICE_CRYPTONIGHT_EXTENSION_ARGUMENTS=""
 
-#NICE_CNHEAVY
-NICE_CNHEAVY_POOL="cryptonightheavy.eu.nicehash.com"
-NICE_CNHEAVY_PORT="3364"
-NICE_CNHEAVY_WORKER="$WORKERNAME"
-NICE_CNHEAVY_EXTENSION_ARGUMENTS=""
+#NICE_CRYPTONIGHTV7
+NICE_CRYPTONIGHTV7_POOL="cryptonightv7.eu.nicehash.com"
+NICE_CRYPTONIGHTV7_PORT="3363"
+NICE_CRYPTONIGHTV7_WORKER="$WORKERNAME"
+NICE_CRYPTONIGHTV7_EXTENSION_ARGUMENTS=""
+
+#NICE_CRYPTONIGHTV8
+NICE_CRYPTONIGHTV8_POOL="cryptonightv8.eu.nicehash.com"
+NICE_CRYPTONIGHTV8_PORT="3367"
+NICE_CRYPTONIGHTV8_WORKER="$WORKERNAME"
+NICE_CRYPTONIGHTV8_EXTENSION_ARGUMENTS=""
+
+#NICE_CRYPTONIGHTNHEAVY
+NICE_CRYPTONIGHTNHEAVY_POOL="cryptonightheavy.eu.nicehash.com"
+NICE_CRYPTONIGHTNHEAVY_PORT="3364"
+NICE_CRYPTONIGHTNHEAVY_WORKER="$WORKERNAME"
+NICE_CRYPTONIGHTNHEAVY_EXTENSION_ARGUMENTS=""
 
 #NICE_X11GOST 
 NICE_X11GOST_POOL="x11gost.eu.nicehash.com"
@@ -1281,6 +1294,20 @@ NICE_X16R_PORT="3366"
 NICE_X16R_WORKER="$WORKERNAME"
 NICE_X16R_EXTENSION_ARGUMENTS=""
 
+# example, adding NICE_NEWALGO:
+#
+#   #NICE_NEWALGO
+#   NICE_NEWALGO_ADDRESS="$NICE_ADDRESS"
+#   NICE_NEWALGO_EXTENSION_ARGUMENTS=""
+#   NICE_NEWALGO_POOL="newalgo.eu.nicehash.com"
+#   NICE_NEWALGO_PORT="4242"
+#   NICE_NEWALGO_WORKER="$WORKERNAME"
+#   NICE_NEWALGO_POOL_PROTOCOL="stratum+tcp"
+#
+# then search and edit NEWALGO_COINS="...,NICE_NEWALGO"
+#
+# NOTE: if you use WTM switching make sure to use as nicehash coin name the NICE_ prefix
+#       followed by the exact name of the algo like named by WTM
 
 ########################################################
 #                                                      #
