--- a/1bash.template
+++ b/1bash.template
@@ -655,36 +655,37 @@ plusCPU_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 #                                                      #
 ########################################################
 
-CLAYMORE_OPTS=""                                 # Claymore optional arguments. EX: add "-esm 2" for miningpoolhub
-CLAYMORE_VERSION="recommended"                   # "latest", "recommended" or the version folder name.
+CLAYMORE_OPTS="-mport 3333"                        # Claymore optional arguments. EX: add "-esm 2" for miningpoolhub
+CLAYMORE_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
-ETHMINER_OPTS=""                                 # Ethminer optional arguments. add "--api-port -3333" if you want web info
-ETHMINER_VERSION="recommended"                   # "latest", "recommended" or the version folder name.
+ETHMINER_OPTS="--api-port 3333"                    # Ethminer optional arguments. add "--api-port -3333" if you want web info
+ETHMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
-DSTM_OPTS=""                                     # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
-DSTM_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
+DSTM_OPTS="--telemetry=127.0.0.1:2222"             # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
+DSTM_VERSION="recommended"                         # "latest", "recommended" or the version folder name.
 
-EWBF_PERCENT="0"                                 # change EWBF_PERCENT to alter donation percent for EWBF Miner   
-EWBF_OPTS=""                                     # EWBF Equihash Miner optional arguments. add "--api $IPW:42000" if you want web info
-EWBF_VERSION="recommended"                       # "latest", "recommended" or the version folder name. If choose 3.3 you should extract 3.3 in miner folder to 3.3 folder
+EWBF_PERCENT="0"                                   # change EWBF_PERCENT to alter donation percent for EWBF Miner   
+EWBF_OPTS="--api 127.0.0.1:42000"                  # EWBF Equihash Miner optional arguments. add "--api $IPW:42000" if you want web info
+EWBF_VERSION="recommended"                         # "latest", "recommended" or the version folder name. If choose 3.3 you should extract 3.3 in miner folder to 3.3 folder
 
-Z_EWBF_PERCENT="0"                               # EWBF ZHASH Dev fee percent to alter donation percent   
-Z_EWBF_OPTS=""                                   # EWBF ZHASH Miner optional arguments. add "--api $IPW:42000" if you want web info
-Z_EWBF_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
+Z_EWBF_PERCENT="0"                                 # EWBF ZHASH Dev fee percent to alter donation percent   
+Z_EWBF_OPTS="--api 127.0.0.1:42000"                # EWBF ZHASH Miner optional arguments. add "--api $IPW:42000" if you want web info
+Z_EWBF_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
 
-BMINER_OPTS=""                                   # Bminer optional arguments. add "--api $IPW:42000" if you want web info
-BMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
+BMINER_OPTS="-api 127.0.0.1:1880"                  # Bminer optional arguments. add "--api $IPW:42000" if you want web info
+BMINER_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
 #BMINER_PROTOCOL, Deprecated, use COIN_POOL_PROTOCOL
 
-LOLMINER_OPTS=""                                 # LOLMINER optional arguments.
-LOLMINER_VERSION="recommended"                   # "latest", "recommended" or the version folder name.
+LOLMINER_OPTS="-apiport=9999"                      # LOLMINER optional arguments.
+LOLMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
-PhoenixMiner_OPTS=""                                 # PhoenixMiner optional arguments. Read the README file inside PhoenixMiner folder
-PhoenixMiner_VERSION="recommended"                   # "latest", "recommended" or the version folder name.
+PhoenixMiner_OPTS="-cdm 1 -cdmport 127.0.0.1:3333" # PhoenixMiner optional arguments. Read the README file inside PhoenixMiner folder
+PhoenixMiner_VERSION="recommended"                 # "latest", "recommended" or the version folder name.
 
-CCMINER_OPTS=""                                  # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want web info (first one allows remote monitoring by default)
+CCMINER_OPTS="-b 127.0.0.1:4028"                   # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want 
+                                                   # web info (first one allows remote monitoring by default)
 
-ASccminer_VERSION="recommended"                  # "latest", "recommended" or the version folder name.
+ASccminer_VERSION="recommended"                    # "latest", "recommended" or the version folder name.
 CryptoDredge_VERSION="recommended"
 KTccminer_VERSION="recommended"
 KTccminer_cryptonight_VERSION="recommended"
