Adding support for parsing miner digests.  Auto-rolling foreman-miner-monitor log file.  Moving FOREMAN_HOME to .foreman in user home.  Cleanup

--- a/1bash.template
+++ b/1bash.template
@@ -658,7 +658,7 @@ plusCPU_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 CLAYMORE_OPTS="-mport 3333"                        # Claymore optional arguments. EX: add "-esm 2" for miningpoolhub
 CLAYMORE_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
-ETHMINER_OPTS="--api-port 3333"                    # Ethminer optional arguments. add "--api-port -3333" if you want web info
+ETHMINER_OPTS=""                                   # Ethminer optional arguments. add "--api-port -3333" if you want web info
 ETHMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
 DSTM_OPTS="--telemetry=127.0.0.1:2222"             # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
