--- a/1bash.template
+++ b/1bash.template
@@ -121,11 +121,11 @@ v0042="papampi;lolMiner"
 v0043="papampi;PhoenixMiner"
 v0044="papampi;Auto restart miner,T_Rex miner"
 v0045="papampi;XMR_Stak 2.5.1, CryptoNightV8"
-
+v0046="papampi;X22I, SUQA"
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.0" 
-nvOC_1bash_ver="0045"
+nvOC_1bash_ver="0046"
 nvOC_1bash_least_compatible="0034"
 nvOC_1bash_last_compatible="0035"
 
@@ -416,6 +416,7 @@ SKEIN_COINS="ZPOOL_SKEIN,MPH_SKEIN"
 SKUNK_COINS="SIGT,ZPOOL_SKUNK,ALTCOM,NICE_SKUNKHASH"
 X13_COINS="ONION"
 X16R_COINS="RVN,XMN,NICE_X16R"
+X22I_COINS="SUQA"
 XEVAN_COINS="BSD"
 ZHASH_COINS="AION,BTG"
 
@@ -595,6 +596,11 @@ X13_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 X16R_INTENSITY="0"
 X16R_MINER="ZENEMYminer"
 X16R_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+## X22I
+X22I_INTENSITY="0"
+X22I_MINER="ZENEMYminer"
+X22I_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT
 
 ## XEVAN
 XEVAN_INTENSITY="0"
@@ -1045,6 +1051,14 @@ SUMO_POOL="SUMO_POOL"
 SUMO_PORT="SUMO_PORT"
 SUMO_WORKER="$WORKERNAME"
 SUMO_POOL_PROTOCOL="stratum+tcp"
+
+# SUQA (SUQA)
+SUQA_ADDRESS="replace_with_your_address"
+SUQA_EXTENSION_ARGUMENTS=""
+SUQA_POOL="SUQA_POOL"
+SUQA_PORT="SUQA_PORT"
+SUQA_WORKER="$WORKERNAME"
+SUQA_POOL_PROTOCOL="stratum+tcp"
 
 # TrezarCoin (TZC)
 TZC_ADDRESS="replace_with_your_address"
