--- a/1bash.template
+++ b/1bash.template
@@ -599,7 +599,7 @@ X16R_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## X22I
 X22I_INTENSITY="0"
-X22I_MINER="ZENEMYminer"
+X22I_MINER="T_Rex"
 X22I_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT
 
 ## XEVAN
