--- a/1bash.template
+++ b/1bash.template
@@ -122,10 +122,12 @@ v0043="papampi;PhoenixMiner"
 v0044="papampi;Auto restart miner,T_Rex miner"
 v0045="papampi;XMR_Stak 2.5.1, CryptoNightV8"
 v0046="papampi;X22I, SUQA"
+v0047="papampi;Energi Algo, ENERGIMINER, NRG COIN"
+
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.0" 
-nvOC_1bash_ver="0046"
+nvOC_1bash_ver="0047"
 nvOC_1bash_least_compatible="0034"
 nvOC_1bash_last_compatible="0035"
 
@@ -390,7 +392,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 DECRED EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
@@ -398,6 +400,7 @@ CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
 DECRED_COINS="DCR"
+ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
 ETHASH_COINS="ETH,ETC,EXP,UBQ,CLO,MUSIC,SOIL,MPH_ETHASH,PIRL,NICE_ETHASH,ETP,CLAYMORE_DUAL"
 GRS_COINS="GRS,MPH_GRS"
@@ -472,7 +475,8 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 #          "Z_EWBF", "BMINER", "LOLMINER"
 #        Ethash:
 #          "CLAYMORE", "ETHMINER", "GENOIL", "BMINER", "PhoenixMiner"
-
+#        Energi:
+#          "ENERGIMINER"
 
 ## BITCORE, TIMETRAVEL10
 BITCORE_INTENSITY="0"
@@ -503,6 +507,10 @@ CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 DCR_INTENSITY="0"
 DCR_MINER="TPccminer"
 DCR_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+## ENERGI
+ENERGI_MINER="ENERGIMINER"
+ENERGI_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## EQUIHASH
 EQUIHASH_MINER="DSTM"
@@ -669,6 +677,10 @@ LOLMINER_VERSION="recommended"                   # "latest", "recommended" or th
 PhoenixMiner_OPTS=""                                 # PhoenixMiner optional arguments. Read the README file inside PhoenixMiner folder
 PhoenixMiner_VERSION="recommended"                   # "latest", "recommended" or the version folder name.
 
+ENERGIMINER_OPTS=""                                     # ENERGIMINER Miner optional arguments
+ENERGIMINER_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
+
+
 CCMINER_OPTS=""                                  # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want web info (first one allows remote monitoring by default)
 
 ASccminer_VERSION="recommended"                  # "latest", "recommended" or the version folder name.
@@ -810,6 +822,14 @@ ELLA_POOL="replace_with_pool_address"
 ELLA_PORT="replace_with_pool_port"
 ELLA_WORKER="$WORKERNAME"
 ELLA_POOL_PROTOCOL="stratum+tcp"
+
+# Energi Coin (NRG)
+NRG_ADDRESS="replace_with_your_address"
+NRG_EXTENSION_ARGUMENTS=""   
+NRG_POOL="stratum.nrg.minecrypto.pro"
+NRG_PORT="9999"
+NRG_WORKER="$WORKERNAME"
+NRG_POOL_PROTOCOL="stratum"
 
 # Ethereum Classic (ETC)
 ETC_ADDRESS="replace_with_your_address"
@@ -1580,6 +1600,11 @@ CRYPTONIGHTV7_MEMORY_OVERCLOCK=0         # Recommended value for some GTX-1060: 
 CRYPTONIGHTHEAVY_POWERLIMIT_WATTS=100    # Recommended value for some GTX-1060: 62
 CRYPTONIGHTHEAVY_CORE_OVERCLOCK=0        # Recommended value for some GTX-1060: 155
 CRYPTONIGHTHEAVY_MEMORY_OVERCLOCK=0      # Recommended value for some GTX-1060: -300
+
+# ENERGI
+ENERGI_POWERLIMIT_WATTS=100              # No Recommendation
+ENERGI_CORE_OVERCLOCK=0                  # No Recommendation
+ENERGI_MEMORY_OVERCLOCK=0                # No Recommendation
 
 # Equihash
 EQUIHASH_POWERLIMIT_WATTS=100            # Recommended value for some GTX-1060: 76
