--- a/1bash.template
+++ b/1bash.template
@@ -497,7 +497,7 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 #        Ethash:
 #          "CLAYMORE", "ETHMINER", "GENOIL", "BMINER", "PhoenixMiner"
 #        Zhash:
-#          "Z_EWBF", "BMINER", "LOLMINER"
+#          "Z_EWBF", "BMINER", "LOLMINER, GMINER"
 
 
 ## BITCORE, TIMETRAVEL10
@@ -681,8 +681,17 @@ plusCPU_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 #            NEWMINER_VERSION="4.2.0"    # default: "recommended", otherwise you can choose "latest" or the exact version number
 #            NEWMINER_OPTS=""            # default: empty
 
+BMINER_OPTS=""                                     # Bminer optional arguments. add "--api $IPW:42000" if you want web info
+BMINER_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
+
 CLAYMORE_OPTS=""                                   # Claymore optional arguments. EX: add "-esm 2" for miningpoolhub
 CLAYMORE_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
+
+CryptoDredge_OPTS=""                                   # CryptoDredge optional arguments
+CryptoDredge_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
+
+DSTM_OPTS="--telemetry=127.0.0.1:2222"             # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
+DSTM_VERSION="recommended"                         # "latest", "recommended" or the version folder name.
 
 ENERGIMINER_OPTS="--response-timeout 10 --cuda-parallel-hash 8 --cuda-block-size 256"    # ENERGIMINER Miner optional arguments
 ENERGIMINER_VERSION="recommended"                  # "latest", "recommended" or the version folder name.
@@ -690,25 +699,28 @@ ENERGIMINER_VERSION="recommended"                  # "latest", "recommended" or 
 ETHMINER_OPTS=""                                   # Ethminer optional arguments. add "--api-port -3333" if you want web info
 ETHMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
-DSTM_OPTS="--telemetry=127.0.0.1:2222"             # DSTM Miner optional arguments add "--telemetry=$IPW:42000" if you want web info
-DSTM_VERSION="recommended"                         # "latest", "recommended" or the version folder name.
-
 EWBF_PERCENT="0"                                   # change EWBF_PERCENT to alter donation percent for EWBF Miner   
 EWBF_OPTS="--api 127.0.0.1:42000"                  # EWBF Equihash Miner optional arguments. add "--api $IPW:42000" if you want web info
 EWBF_VERSION="recommended"                         # "latest", "recommended" or the version folder name. If choose 3.3 you should extract 3.3 in miner folder to 3.3 folder
 
-Z_EWBF_PERCENT="0"                                 # EWBF ZHASH Dev fee percent to alter donation percent   
-Z_EWBF_OPTS="--api 127.0.0.1:42000"                # EWBF ZHASH Miner optional arguments. add "--api $IPW:42000" if you want web info
-Z_EWBF_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
-
-BMINER_OPTS=""                                     # Bminer optional arguments. add "--api $IPW:42000" if you want web info
-BMINER_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
+GMINER_OPTS=""
+GMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
 LOLMINER_OPTS="-apiport=9999"                      # LOLMINER optional arguments.
 LOLMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
 PhoenixMiner_OPTS="-cdm 1 -cdmport 127.0.0.1:3333" # PhoenixMiner optional arguments. Read the README file inside PhoenixMiner folder
 PhoenixMiner_VERSION="recommended"                 # "latest", "recommended" or the version folder name.
+
+T_REX_OPTS=""                                      # T_REX optional arguments.
+T_REX_VERSION="recommended"                        # "latest", "recommended" or the version folder name.
+
+Z_EWBF_PERCENT="0"                                 # EWBF ZHASH Dev fee percent to alter donation percent   
+Z_EWBF_OPTS="--api 127.0.0.1:42000"                # EWBF ZHASH Miner optional arguments. add "--api $IPW:42000" if you want web info
+Z_EWBF_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
+
+ZENEMYminer_OPTS=""
+ZENEMYminer_VERSION="recommended"                  # "latest", "recommended" or the version folder name.
 
 CCMINER_OPTS="-b 127.0.0.1:4028"                   # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want 
                                                    # web info (first one allows remote monitoring by default)
