PHI2_MINER="CryptoDredge"

--- a/1bash.template
+++ b/1bash.template
@@ -572,7 +572,7 @@ PHI1612_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## PHI2
 PHI2_INTENSITY="0"
-PHI2_MINER="ANXccminer"
+PHI2_MINER="CryptoDredge"
 PHI2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## SIA
