--- a/1bash.template
+++ b/1bash.template
@@ -123,11 +123,12 @@ v0044="papampi;Auto restart miner,T_Rex miner"
 v0045="papampi;XMR_Stak 2.5.1, CryptoNightV8"
 v0046="papampi;X22I, SUQA"
 v0047="papampi;Energi Algo, ENERGIMINER, NRG COIN"
+v0048="papampi;cuckaroo29 and cuckoo Algo"
 
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.0" 
-nvOC_1bash_ver="0047"
+nvOC_1bash_ver="0048"
 nvOC_1bash_least_compatible="0034"
 nvOC_1bash_last_compatible="0035"
 
@@ -392,13 +393,16 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
+CUCKOO_COINS="AE"
+CUCKAROO29_COINS="GRIN"
 DECRED_COINS="DCR"
 ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
@@ -478,6 +482,7 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 #        Energi:
 #          "ENERGIMINER"
 
+
 ## BITCORE, TIMETRAVEL10
 BITCORE_INTENSITY="0"
 BITCORE_MINER="ZENEMYminer"
@@ -502,6 +507,14 @@ CRYPTONIGHTV8_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 CRYPTONIGHTHEAVY_INTENSITY="0"
 CRYPTONIGHTHEAVY_MINER="XMR_Stak"
 CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKAROO29 
+CUCKAROO29_MINER="GMINER"
+CUCKAROO29_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKAOO 
+CUCKOO_MINER="GMINER"
+CUCKOO_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Decred
 DCR_INTENSITY="0"
@@ -680,6 +693,8 @@ PhoenixMiner_VERSION="recommended"                   # "latest", "recommended" o
 ENERGIMINER_OPTS="-U --response-timeout 10 --cuda-parallel-hash 8 --cuda-block-size 256"            # ENERGIMINER Miner optional arguments
 ENERGIMINER_VERSION="recommended"                       # "latest", "recommended" or the version folder name.
 
+GMINER_OPTS=""                                   # Gminer optional arguments. 
+GMINER_VERSION="recommended"                     # "latest", "recommended" or the version folder name.
 
 CCMINER_OPTS=""                                  # ccminer optional arguments. Add "-b 0.0.0.0:4028", or "-b $IPW:42000" if you want web info (first one allows remote monitoring by default)
 
@@ -710,6 +725,14 @@ ZENEMYminer_VERSION="recommended"
 #        Ethash Stratum:"ethash", Ethash Stratum+SSL:"ethash+ssl", Ethereum Proxy:"ethproxy" ethereum Stratum:"ethstratum"
 #        ZHash Algos like BTG: "zhash"
 #        Tensority based coins like BTM: "tensority"
+
+# Aeternity (AE)
+AE_ADDRESS="replace_with_your_address"
+AE_EXTENSION_ARGUMENTS=""
+AE_POOL="AE POOL"
+AE_PORT="AE PORT"
+AE_WORKER="$WORKERNAME"
+AE_POOL_PROTOCOL="stratum+tcp"
 
 # AION
 AION_ADDRESS="replace_with_your_address"
@@ -814,6 +837,14 @@ DSR_POOL="DSR_POOL"
 DSR_PORT="DSR_PORT"
 DSR_WORKER="$WORKERNAME"
 DSR_POOL_PROTOCOL="stratum+tcp"
+
+# GrinCoin (GRIN)
+GRIN_ADDRESS="replace_with_your_address"
+GRIN_EXTENSION_ARGUMENTS=""
+GRIN_POOL="GRIN_POOL"
+GRIN_PORT="GRIN_PORT"
+GRIN_WORKER="$WORKERNAME"
+GRIN_POOL_PROTOCOL="stratum+tcp"
 
 #Ellaism (ELLA)
 ELLA_ADDRESS="replace_with_your_address"
@@ -1600,6 +1631,14 @@ CRYPTONIGHTV7_MEMORY_OVERCLOCK=0         # Recommended value for some GTX-1060: 
 CRYPTONIGHTHEAVY_POWERLIMIT_WATTS=100    # Recommended value for some GTX-1060: 62
 CRYPTONIGHTHEAVY_CORE_OVERCLOCK=0        # Recommended value for some GTX-1060: 155
 CRYPTONIGHTHEAVY_MEMORY_OVERCLOCK=0      # Recommended value for some GTX-1060: -300
+
+CUCKAROO29_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKAROO29_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKAROO29_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
+
+CUCKOO_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKOO_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKOO_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
 
 # ENERGI
 ENERGI_POWERLIMIT_WATTS=100              # Same as Ethash
