--- a/1bash.template
+++ b/1bash.template
@@ -124,11 +124,12 @@ v0045="papampi;XMR_Stak 2.5.1, CryptoNightV8"
 v0046="papampi;X22I, SUQA"
 v0047="papampi;Energi Algo, ENERGIMINER, NRG COIN"
 v0048="papampi;cuckaroo29 and cuckoo Algo"
+v0049="papampi;MTP Algo"
 
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.0" 
-nvOC_1bash_ver="0048"
+nvOC_1bash_ver="0049"
 nvOC_1bash_least_compatible="0034"
 nvOC_1bash_last_compatible="0035"
 
@@ -393,7 +394,7 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MTP MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
 
 
 BITCORE_COINS="BTX"
@@ -411,7 +412,8 @@ GRS_COINS="GRS,MPH_GRS"
 HEX_COINS="XDNA"
 LBRY_COINS="LBC,ZPOOL_LBRY"
 LYRA2V2_COINS="MONA,VTC,NICE_LYRA2REV2,XVG,MPH_LYRA2V2,ZPOOL_LYRA2V2"
-LYRA2Z_COINS="XZC,MPH_LYRA2Z"
+LYRA2Z_COINS="MPH_LYRA2Z"
+MTP_COINS="XZC"
 MYR_GR_COINS="XMY,MPH_MYR_GR"
 NEOSCRYPT_COINS="FTC,ORB,PXC,VIVO,TZC,NICE_NEOSCRYPT,DSR,CRC,GBX,MPH_NEOSCRYPT,ZPOOL_NEOSCRYPT"
 PASCAL_COINS="PASC,PASL"
@@ -484,7 +486,7 @@ MINER_PWD="x"                                    # Set the miner password. Defau
 
 
 ## BITCORE, TIMETRAVEL10
-BITCORE_INTENSITY="0"
+BITCORE_INTENSITY="19"
 BITCORE_MINER="ZENEMYminer"
 BITCORE_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -554,7 +556,7 @@ LBRY_MINER="SPccminer"
 LBRY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## LYRA2REV2
-LYRA2V2_INTENSITY="1"
+LYRA2V2_INTENSITY="6"
 LYRA2V2_MINER="CryptoDredge"
 LYRA2V2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -563,13 +565,18 @@ LYRA2Z_INTENSITY="0"
 LYRA2Z_MINER="TPccminer"
 LYRA2Z_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
+## MTP
+MTP_INTENSITY="6"
+MTP_MINER="CryptoDredge"
+MTP_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
 ## Myriad Groestl
 MYR_GR_INTENSITY="0"
 MYR_GR_MINER="TPccminer"
 MYR_GR_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Neoscrypt
-NEOSCRYPT_INTENSITY="1"
+NEOSCRYPT_INTENSITY="6"
 NEOSCRYPT_MINER="CryptoDredge"
 NEOSCRYPT_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -579,12 +586,12 @@ PASCAL_MINER="TPccminer"
 PASCAL_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## PHI1612
-PHI1612_INTENSITY="0"
-PHI1612_MINER="ANXccminer"
+PHI1612_INTENSITY="6"
+PHI1612_MINER="CryptoDredge"
 PHI1612_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## PHI2
-PHI2_INTENSITY="0"
+PHI2_INTENSITY="6"
 PHI2_MINER="CryptoDredge"
 PHI2_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -614,7 +621,7 @@ X13_MINER="TPccminer"
 X13_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## X16R
-X16R_INTENSITY="0"
+X16R_INTENSITY="19"
 X16R_MINER="ZENEMYminer"
 X16R_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -624,7 +631,7 @@ X22I_MINER="T_Rex"
 X22I_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## XEVAN
-XEVAN_INTENSITY="0"
+XEVAN_INTENSITY="19"
 XEVAN_MINER="ZENEMYminer"
 XEVAN_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
@@ -1669,6 +1676,11 @@ LYRA2V2_MEMORY_OVERCLOCK=0               # Recommended value for some GTX-1060: 
 LYRA2Z_POWERLIMIT_WATTS=100           # Recommended value for some GTX-1060: 65
 LYRA2Z_CORE_OVERCLOCK=0               # Recommended value for some GTX-1060: 135
 LYRA2Z_MEMORY_OVERCLOCK=0             # Recommended value for some GTX-1060: -1200
+
+# MTP
+MTP_POWERLIMIT_WATTS=100              # No Recommendations
+MTP_CORE_OVERCLOCK=0                  # No Recommendations
+MTP_MEMORY_OVERCLOCK=0                # No Recommendations
 
 # Neoscrypt
 NEOSCRYPT_POWERLIMIT_WATTS=100           # Recommended value for some GTX-1060: 80
