--- a/1bash.template
+++ b/1bash.template
@@ -129,10 +129,11 @@ v0048="LuKePicci;Changes for brightskye's extended miner options handling"
 v0049="papampi;CryptoNightV8, X22I, SUQA, Energi Algo, ENERGIMINER, NRG COIN"
 v0050="papampi;Miner Schedule"
 v0051="papampi;MTP Algo"
+v0052="papampi;cuckaroo29, cuckoo, cuckatoo31 Algo"
 
 # Do not edit these lines
 nvOC_Ver="v0019-3.1" 
-nvOC_1bash_ver="0051"
+nvOC_1bash_ver="0052"
 nvOC_1bash_least_compatible="0048"
 nvOC_1bash_last_compatible="0048"
 
@@ -420,13 +421,16 @@ fi
 #        support it and a compatilbe miner in the next sections.
 #        See the example for NEWCOIN/NEWALGO at the end of this section.
 
-ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
+ALGOS="BITCORE CRYPTONIGHT CRYPTONIGHTHEAVY CRYPTONIGHTV7 CRYPTONIGHTV8 CUCKAROO29 CUCKATOO31 CUCKOO DECRED ENERGI EQUIHASH ETHASH GRS LBRY LYRA2V2 LYRA2Z MYR_GR NEOSCRYPT PASCAL PHI1612 PHI2 SIA SIB SKEIN SKUNK X13 X16R X22I XEVAN ZHASH"
 
 BITCORE_COINS="BTX"
 CRYPTONIGHT_COINS="KRB,NICE_CRYPTONIGHT"
 CRYPTONIGHTV7_COINS="ETN,NICE_CRYPTONIGHTV7"
 CRYPTONIGHTV8_COINS="XMR,MPH_CRYPTONIGHTV8,NICE_CRYPTONIGHTV8"
 CRYPTONIGHTHEAVY_COINS="LOKI,NICE_CRYPTONIGHTHEAVY"
+CUCKOO_COINS="AE"
+CUCKAROO29_COINS="GRIN"
+CUCKATOO31_COINS="GRIN31"
 DECRED_COINS="DCR"
 ENERGI_COINS="NRG"
 EQUIHASH_COINS="ZEC,ZEN,HUSH,ZCL,BTCP,KMD,ZPOOL_EQUIHASH,MPH_EQUIHASH,NICE_EQUIHASH,VOTE,BTCP,BCI"
@@ -532,6 +536,18 @@ CRYPTONIGHTV8_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 CRYPTONIGHTHEAVY_INTENSITY="0"
 CRYPTONIGHTHEAVY_MINER="XMR_Stak"
 CRYPTONIGHTHEAVY_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKAROO29 
+CUCKAROO29_MINER="GMINER"
+CUCKAROO29_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKATOO31 
+CUCKATOO31_MINER="GMINER"
+CUCKATOO31_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
+
+# CUCKAOO 
+CUCKOO_MINER="GMINER"
+CUCKOO_WALLET_FORMAT="$WALLET_ADDRESS_FORMAT"
 
 ## Decred
 DCR_INTENSITY="0"
@@ -758,6 +774,14 @@ CCMINER_OPTS="-b 127.0.0.1:4028"                   # ccminer optional arguments.
 #        ZHash Algos like BTG: "zhash"
 #        Tensority based coins like BTM: "tensority"
 
+# Aeternity (AE)
+AE_ADDRESS="replace_with_your_address"
+AE_EXTENSION_ARGUMENTS=""
+AE_POOL="AE POOL"
+AE_PORT="AE PORT"
+AE_WORKER="$WORKERNAME"
+AE_POOL_PROTOCOL="stratum+tcp"
+
 # AION
 AION_ADDRESS="replace_with_your_address"
 AION_OPTS="--algo aion"
@@ -941,6 +965,14 @@ GBX_POOL="replace_with_pool_address"
 GBX_PORT="replace_with_pool_port"
 GBX_WORKER="$WORKERNAME"
 GBX_POOL_PROTOCOL="stratum+tcp"
+
+# GrinCoin (GRIN)
+GRIN_ADDRESS="replace_with_your_address"
+GRIN_EXTENSION_ARGUMENTS=""
+GRIN_POOL="GRIN_POOL"
+GRIN_PORT="GRIN_PORT"
+GRIN_WORKER="$WORKERNAME"
+GRIN_POOL_PROTOCOL="stratum+tcp"
 
 # Groestl (GRS)
 GRS_ADDRESS="replace_with_your_address"
@@ -1673,6 +1705,20 @@ CRYPTONIGHTV7_MEMORY_OVERCLOCK=0         # Recommended value for some GTX-1060: 
 CRYPTONIGHTHEAVY_POWERLIMIT_WATTS=100    # Recommended value for some GTX-1060: 62
 CRYPTONIGHTHEAVY_CORE_OVERCLOCK=0        # Recommended value for some GTX-1060: 155
 CRYPTONIGHTHEAVY_MEMORY_OVERCLOCK=0      # Recommended value for some GTX-1060: -300
+
+#CUCKAROO29
+CUCKAROO29_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKAROO29_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKAROO29_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
+
+#CUCKATOO31
+CUCKATOO31_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKATOO31_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKATOO31_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
+
+CUCKOO_POWERLIMIT_WATTS=100          # Recommended value same as Equihash
+CUCKOO_CORE_OVERCLOCK=0                # Recommended value same as Equihash
+CUCKOO_MEMORY_OVERCLOCK=0              # Recommended value same as Equihash
 
 # ENERGI
 ENERGI_POWERLIMIT_WATTS=100              # Same as Ethash
